# bazel-generated-sources

./: BUILD.bazel  MODULE.bazel  README.md  defs.bzl  go.mod  go.sum
e2e/smoke/: BUILD.bazel  MODULE.bazel  go.mod
e2e/smoke/proto/greeter/: BUILD.bazel  greeter.proto
internal/cmd/source-archiver/: BUILD.bazel  source-archiver.go
