module(
    name = "bazel_generated_sources",
    version = "0.0.1",
    compatibility_level = 0,
)

bazel_dep(name = "rules_go", version = "0.39.1")
bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "gazelle", version = "0.35.0", repo_name = "bazel_gazelle")

bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.1")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_golang_glog", "org_golang_x_sync")
