load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "source-archiver_lib",
    srcs = ["source-archiver.go"],
    importpath = "github.com/meta-programming/bazel-generated-sources/internal/cmd/source-archiver",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_golang_glog//:glog",
        "@org_golang_x_sync//errgroup",
    ],
)

go_binary(
    name = "source-archiver",
    embed = [":source-archiver_lib"],
    visibility = ["//:__subpackages__"],
)
