load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "greeterpb_proto",
    srcs = ["greeter.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "greeterpb_go_proto",
    importpath = "github.com/xyz123/greeterpb",
    proto = ":greeterpb_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "greeterpb",
    embed = [":greeterpb_go_proto"],
    importpath = "github.com/xyz123/greeterpb",
    visibility = ["//visibility:public"],
)
